--- a/views/layout.jade
+++ b/views/layout.jade
@@ -132,6 +132,7 @@ html(ng-app)
 
     - if (env.debug)
         script(src='/js/angular.min.js')
+        script(src='/js/filters/numbere.js')
         script(src='/js/main.js')
     - else
         script(src='/js/app.js?' + env.serial)
