--- a/views/includes/invest.jade
+++ b/views/includes/invest.jade
@@ -24,11 +24,11 @@ section
                     td.ticker
                         a(target='_blank', title='view on btct.co', href='https://btct.co/security/{{security.market.ticker}}', ng-show='security.market.ticker') {{security.market.ticker}}
 
-                    td.right {{security.market.bid| currency:""}}
+                    td.right {{security.market.bid| numbere}}
                     td.right {{security.quantity}}
-                    td.right {{security.total_value| currency:""}}
+                    td.right {{security.total_value| numbere}}
                     td.right
-                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(security.total_value)| currency:""}}
+                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(security.total_value)| numbere}}
                     td.right(ng-class="{negative: getTickerChange(security, '24h_avg') < 0, positive: getTickerChange(security, '24h_avg') > 0}")
                         {{getTickerChange(security, '24h_avg') | number:1}}%
                     td.right(ng-class="{negative: getTickerChange(security, '7d_avg') < 0, positive: getTickerChange(security, '7d_avg') > 0}")
@@ -40,13 +40,13 @@ section
             tbody.sum
                 tr.noborder
                     td.right(colspan='3') Balance
-                    td.right {{invest.btctc.balance.BTC| currency:""}}
+                    td.right {{invest.btctc.balance.BTC| numbere}}
                     td.right
-                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.btctc.balance.BTC)| currency:""}}
+                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.btctc.balance.BTC)| numbere}}
                     td(colspan='3')
                 tr.noborder
                     td.right.bold(colspan='3') Total
-                    td.right.bold {{invest.totalbtc| currency: ""}}
+                    td.right.bold {{invest.totalbtc| numbere}}
                     td.right.bold
-                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.totalbtc)| currency: ""}}
+                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.totalbtc)| numbere}}
                     td(colspan='3')
