--- a/views/includes/market.jade
+++ b/views/includes/market.jade
@@ -1,6 +1,7 @@
 section
     h2 Market
-    span.spinner(ng-show='market.loading > 0') &nbsp;
+    span.spinner(ng-show='market.loading > 0')
+        i.icon-refresh.icon-spin
     span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.market=true',ng-mouseout='settings.helptopic.market=false') ?
     div(ng-show='market.bitcoindata')
         table
