--- a/views/layout.jade
+++ b/views/layout.jade
@@ -74,7 +74,7 @@ html(ng-app)
 
         .loading.ng-cloak
             p
-                i.icon-refresh
+                i.icon-refresh.icon-spin
                 |  Loading…
 
 
