--- a/views/includes/invest.jade
+++ b/views/includes/invest.jade
@@ -1,7 +1,7 @@
 section
     h2 Invest
     span.spinner(ng-show='invest.loading > 0')
-        i.icon-refresh
+        i.icon-refresh.icon-spin
     span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.invest=true',ng-mouseout='settings.helptopic.invest=false') ?
     .settings(ng-show='settings.show')
         form(ng-submit='addBtcTcApiKey()')
