--- a/views/includes/spend.jade
+++ b/views/includes/spend.jade
@@ -3,7 +3,7 @@ section
     span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.spend=true',ng-mouseout='settings.helptopic.spend=false') ?
     .settings(ng-show='settings.show')
         form(ng-submit='addSpendValue()')
-            input(type='text', ng-model='spend.ValueAdd', placeholder='Add btc (+/-)')
+            input(type='text', ng-model='spend.ValueAdd', placeholder='Add btc (+/-)', smart-float)
             input.btn-primary(type='submit', value='add')
     div
         div(ng-show='spend.value')
