--- a/views/includes/invest.jade
+++ b/views/includes/invest.jade
@@ -2,13 +2,16 @@ section
     h2 Invest
     span.spinner(ng-show='invest.loading > 0')
         i.icon-refresh.icon-spin
+    span.spinner(ng-show='invest.error', title='{{invest.errorStatus}}')
+        i.icon-bell-alt
     span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.invest=true',ng-mouseout='settings.helptopic.invest=false') ?
     .settings(ng-show='settings.show')
-        form(ng-submit='addBtcTcApiKey()')
-            input(type='text', ng-model='invest.BtcTcApiKey', placeholder='Add btct.co API key')
-            input.btn-primary(type='submit', value='save')
+        form(ng-submit='addSecurity()')
+            input(type='text', ng-model='invest.Ticker', placeholder='Symbol (Havelock Invest)')
+            input(type='text', ng-model='invest.Quantity', placeholder='Quantity')
+            input.btn-primary(type='submit', value='add')
     div
-        table#rt1.rt.cf(ng-show='invest.BtcTcApiKey')
+        table#rt1.rt.cf(ng-show='invest.Securities')
             thead.cf
                 tr
                     th Ticker
@@ -21,33 +24,30 @@ section
                     th.right(title='change to 30d average') 30d
 
             tbody.transform
-                tr.data(ng-repeat='security in invest.btctc.securities', ng-show='security.market.bid')
+                tr.data(ng-repeat='security in invest.Securities')
                     td.ticker
-                        a(target='_blank', title='view on btct.co', href='https://btct.co/security/{{security.market.ticker}}', ng-show='security.market.ticker') {{security.market.ticker}}
+                        a(target='_blank', title='view on havelock', href='https://www.havelockinvestments.com/fund.php?symbol={{security.Ticker}}', ng-show='security.Ticker') {{security.Ticker}}
 
-                    td.right {{security.market.bid| numbere}}
-                    td.right {{security.quantity}}
-                    td.right {{security.total_value| numbere}}
+                    td.right {{invest.Tickers[security.Ticker].last| numbere}}
+                    td.right {{security.Quantity}}
+                    td.right {{invest.Tickers[security.Ticker].last*security.Quantity| numbere}}
                     td.right
-                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(security.total_value)| numbere}}
-                    td.right(ng-class="{negative: getTickerChange(security, '24h_avg') < 0, positive: getTickerChange(security, '24h_avg') > 0}")
-                        {{getTickerChange(security, '24h_avg') | number:1}}%
-                    td.right(ng-class="{negative: getTickerChange(security, '7d_avg') < 0, positive: getTickerChange(security, '7d_avg') > 0}")
-                        {{getTickerChange(security, '7d_avg') | number:1}}%
-                    td.right(ng-class="{negative: getTickerChange(security, '30d_avg') < 0, positive: getTickerChange(security, '30d_avg') > 0}")
-                        {{getTickerChange(security, '30d_avg') | number:1}}%
+                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.Tickers[security.Ticker].last*security.Quantity)| numbere}}
+                    td.right(ng-class="{negative: getTickerChange(invest.Tickers[security.Ticker], '1d') < 0, positive: getTickerChange(invest.Tickers[security.Ticker], '1d') > 0}")
+                        span(title!="Min: {{invest.Tickers[security.Ticker]['1d'].min | numbere }}&#xD;Avg: {{invest.Tickers[security.Ticker]['1d'].vwap | numbere }}&#xD;Max: {{invest.Tickers[security.Ticker]['1d'].max | numbere }}&#xD;Vol: {{invest.Tickers[security.Ticker]['1d'].vol | numbere }}&#xD;BTC: {{invest.Tickers[security.Ticker]['1d'].btc | numbere }}")
+                            {{getTickerChange(invest.Tickers[security.Ticker], '1d') | number:1}}%
+                    td.right(ng-class="{negative: getTickerChange(invest.Tickers[security.Ticker], '7d') < 0, positive: getTickerChange(invest.Tickers[security.Ticker], '7d') > 0}")
+                        span(title!="Min: {{invest.Tickers[security.Ticker]['7d'].min | numbere }}&#xD;Avg: {{invest.Tickers[security.Ticker]['7d'].vwap | numbere }}&#xD;Max: {{invest.Tickers[security.Ticker]['7d'].max | numbere }}&#xD;Vol: {{invest.Tickers[security.Ticker]['7d'].vol | numbere }} ({{invest.Tickers[security.Ticker]['7d'].vol/7 | numbere }})&#xD;BTC: {{invest.Tickers[security.Ticker]['7d'].btc | numbere }} ({{invest.Tickers[security.Ticker]['7d'].btc/7 | numbere }})")
+                            {{getTickerChange(invest.Tickers[security.Ticker], '7d') | number:1}}%
+                    td.right(ng-class="{negative: getTickerChange(invest.Tickers[security.Ticker], '30d') < 0, positive: getTickerChange(invest.Tickers[security.Ticker], '30d') > 0}")
+                        span(title!="Min: {{invest.Tickers[security.Ticker]['30d'].min | numbere }}&#xD;Avg: {{invest.Tickers[security.Ticker]['30d'].vwap | numbere }}&#xD;Max: {{invest.Tickers[security.Ticker]['30d'].max | numbere }}&#xD;Vol: {{invest.Tickers[security.Ticker]['30d'].vol | numbere }} ({{invest.Tickers[security.Ticker]['30d'].vol/30 | numbere }})&#xD;BTC: {{invest.Tickers[security.Ticker]['30d'].btc | numbere }} ({{invest.Tickers[security.Ticker]['30d'].btc/30 | numbere }})")
+                            {{getTickerChange(invest.Tickers[security.Ticker], '30d') | number:1}}%
 
 
             tbody.sum
                 tr.noborder
-                    td.right(colspan='3') Balance
-                    td.right {{invest.btctc.balance.BTC| numbere}}
-                    td.right
-                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.btctc.balance.BTC)| numbere}}
-                    td(colspan='3')
-                tr.noborder
                     td.right.bold(colspan='3') Total
-                    td.right.bold {{invest.totalbtc| numbere}}
+                    td.right.bold {{ getSum(invest.Securities) | numbere}}
                     td.right.bold
-                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.totalbtc)| numbere}}
+                        | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(getSum(invest.Securities))| numbere}}
                     td(colspan='3')
