--- a/views/includes/save.jade
+++ b/views/includes/save.jade
@@ -1,4 +1,4 @@
-section
+section(ng-show='save.blockadr || settings.show')
     h2 Save
     span.spinner(ng-show='market.loading > 0')
         i.icon-refresh.icon-spin
