--- a/views/includes/invest.jade
+++ b/views/includes/invest.jade
@@ -1,4 +1,4 @@
-section
+section(ng-show='invest.Securities || settings.show')
     h2 Invest
     span.spinner(ng-show='invest.loading > 0')
         i.icon-refresh.icon-spin
