--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,8 +30,7 @@ html(ng-app)
         link(href='img/apple-touch-startup-image-2048x1496.png', media='screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)', rel='apple-touch-startup-image')
 
 
-        link(href='http://fonts.googleapis.com/css?family=Merriweather+Sans:300,700', rel='stylesheet', type='text/css')
-        link(href='http://fonts.googleapis.com/css?family=Donegal+One', rel='stylesheet', type='text/css')
+        link(href='//fonts.googleapis.com/css?family=Merriweather:300,700|Donegal+One', rel='stylesheet', type='text/css')
 
         - if (env.debug)
             link(rel='stylesheet', href='css/normalize.css')
